fix taxonomy-artist header alignment and #header alignment. align-items-baseline!!!

--- a/src/styl/responsive/mobile.styl
+++ b/src/styl/responsive/mobile.styl
@@ -21,7 +21,6 @@ $footer-logo-size = 21px
     border-bottom: 1px solid $color-white
     #header-logo
       font-size: $footer-logo-size
-      margin-bottom: 0
     #strapline
       transform: translateY(-200px)
 
@@ -29,8 +28,6 @@ $footer-logo-size = 21px
   transition: transform $header-transition
 
 #header-logo
-  line-height: 1
-  margin-bottom: -2px
   transition: font-size $header-transition, margin-bottom $header-transition
 
 #main-nav
