--- a/src/styl/responsive/tablet-landscape.styl
+++ b/src/styl/responsive/tablet-landscape.styl
@@ -10,13 +10,8 @@ $footer-logo-size = 36px
   &.stuck
     #header-logo
       font-size: 36px
-      margin-bottom: -2px
-
-#header-logo
-  margin-bottom: -7px
 
 #strapline
-  margin-bottom: -1px
   margin-left: $margin-tiny
 
 #main-nav
