--- a/src/styl/responsive/tablet-portrait.styl
+++ b/src/styl/responsive/tablet-portrait.styl
@@ -10,10 +10,6 @@ $footer-logo-size = 28px
   &.stuck
     #header-logo
       font-size: $footer-logo-size
-      margin-bottom: -1px
-
-#header-logo
-  margin-bottom: -4px
 
 #main-nav
   li:first-of-type
@@ -58,7 +54,7 @@ $footer-logo-size = 28px
 // TAXONOMY ARTIST
 
 .artist-work-thumb-holder
-  height: 30vw 
+  height: 30vw
 
 // ******************************************************
 
